src/test/resources/purescript_examples/passing/UntupledConstraints.purs.psi
Purescript File
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Prelude')
        PsiElement(whitespace)('\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Console')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSASTWrapperElement(PositionedDeclarationRef)
          PSASTWrapperElement(ValueRef)
            PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ClassName)
          PsiElement(proper name)('Show')
          PsiElement(whitespace)(' ')
        PsiElement(identifier)('a')
        PsiElement(whitespace)(' ')
  PsiErrorElement:Unexpected operator. Expecting Module
    PsiElement(operator)('<=')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Nonsense')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)(' ')
    PsiElement(where)('where')
    PsiElement(whitespace)('\n  ')
    PsiElement(identifier)('method')
    PsiElement(whitespace)(' ')
    PsiElement(::)('::')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)(' ')
    PsiElement(->)('->')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)('\n\n')
    PsiElement(data)('data')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Box')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Box')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)('\n\n')
    PsiElement(instance)('instance')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('showBox')
    PsiElement(whitespace)(' ')
    PsiElement(::)('::')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Show')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)(' ')
    PsiElement(=>)('=>')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Show')
    PsiElement(whitespace)(' ')
    PsiElement(()('(')
    PsiElement(proper name)('Box')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement())(')')
    PsiElement(whitespace)(' ')
    PsiElement(where)('where')
    PsiElement(whitespace)('\n  ')
    PsiElement(identifier)('show')
    PsiElement(whitespace)(' ')
    PsiElement(()('(')
    PsiElement(proper name)('Box')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement())(')')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(string)('"Box "')
    PsiElement(whitespace)(' ')
    PsiElement(operator)('<>')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('show')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('a')
    PsiElement(whitespace)('\n\n')
    PsiElement(identifier)('strangeThing')
    PsiElement(whitespace)(' ')
    PsiElement(::)('::')
    PsiElement(whitespace)(' ')
    PsiElement(forall)('forall')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('m')
    PsiElement(.)('.')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Semigroup')
    PsiElement(whitespace)(' ')
    PsiElement(()('(')
    PsiElement(identifier)('m')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Unit')
    PsiElement())(')')
    PsiElement(whitespace)(' ')
    PsiElement(=>)('=>')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('m')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Unit')
    PsiElement(whitespace)(' ')
    PsiElement(->)('->')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('m')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Unit')
    PsiElement(whitespace)(' ')
    PsiElement(->)('->')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('m')
    PsiElement(whitespace)(' ')
    PsiElement(proper name)('Unit')
    PsiElement(whitespace)('\n')
    PsiElement(identifier)('strangeThing')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('x')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('y')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('x')
    PsiElement(whitespace)(' ')
    PsiElement(operator)('<>')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('y')
    PsiElement(whitespace)('\n\n')
    PsiElement(identifier)('main')
    PsiElement(whitespace)(' ')
    PsiElement(=)('=')
    PsiElement(whitespace)(' ')
    PsiElement(identifier)('log')
    PsiElement(whitespace)(' ')
    PsiElement(string)('"Done"')
    PsiElement(whitespace)('\n')
